# e-commerce-hw

./: .gitignore  README.md  products.json  pyproject.toml  requirements.txt
htmlcov/: index.html
src/: __init__.py  base_product.py  category.py  category_iterator.py  data_loader.py  icons.py  lawn_grass.py  logging_mixin.py  main.py  order.py  product.py  purchase.py  smartphone.py  zero_quantity_error.py
tests/: __init__.py  test_category.py  test_category_iterator.py  test_data_loader.py  test_lawn_grass.py  test_order.py  test_product.py  test_purchase.py  test_smartphone.py  test_zero_quantity_error.py
